# elf

./: .pre-commit-config.yaml  README.org  conftest.py  mkdocs.yml  pyproject.toml
src/elf/: __main__.py
src/elf/console/: application.py
tests/: elf_test.py
